[project]
name = "cuteninja"
version = "0.1.1"
description = "KDL as HTML replacement for Jinja2 templates"
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["kdl-rs-py>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cuteninja"]
